Updated readme for Java 9+ configuration.